# argus

./: .gitignore  .gitmessage  .yamllint  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  mkdocs.yml  requirements-docs.txt
backend/: README.md  README.zh-CN.md  alembic.ini  benchmark_hot_pages.py  pyproject.toml
backend/backend/: __init__.py  app.py  config.py  db.py  deps.py  deps_locale.py  models.py  retention.py
backend/backend/api/: admin.py  admin_config.py  admin_security.py  agents.py  artifacts.py  auth.py  batch_email_subscription.py  batches.py  compare.py  dashboard.py  email_admin.py  events.py  events_stream.py  hosts.py  jobs.py  me.py  meta.py  notifications.py  notifications_email.py  oauth.py  pins.py  preferences.py  project_notification_recipients.py  projects.py  public.py  resources.py  shares.py  sse_multiplex.py  stars.py  stats.py  studies.py  tokens.py
backend/backend/auth/: __init__.py  jwt.py  password.py  tokens.py
backend/backend/demo/: __init__.py  seed.py
backend/backend/emails/: __init__.py
backend/backend/i18n/: __init__.py  messages.py
backend/backend/notifications/: __init__.py  base.py  config.yaml.example  feishu.py  rules.py  watchdog.py
backend/backend/schemas/: __init__.py  admin.py  artifacts.py  audit.py  auth.py  batches_compact.py  compare.py  dashboard.py  email.py  events.py  hosts.py  me.py  pins.py  project_public.py  projects.py  public.py  shares.py  stars.py  studies.py  tokens.py
backend/backend/services/: __init__.py  audit.py  dashboard.py  email.py  email_rate_limit.py  email_templates.py  email_worker.py  eta.py  executor.py  feature_flags.py  health.py  jwt_rotation.py  notifications_dispatcher.py  runtime_config.py  secrets.py  sse_hub.py  storage.py  visibility.py
backend/backend/tests/: _dashboard_helpers.py  conftest.py  test_access_log_redaction.py  test_admin.py  test_agents_api.py  test_anomalous_login.py  test_anonymous_visibility.py  test_api_locale.py  test_api_tokens.py  test_artifacts.py  test_audit_log.py  test_auth_email_verify.py  test_auth_jwt.py  test_auth_login.py  test_auth_password_reset.py  test_auth_register.py  test_backup_loop.py  test_batch_email_subscription.py  test_batch_endpoints_cached.py  (+100 more)
backend/migrations/: env.py
backend/scripts/: check_i18n_keys.py
client/: README.md  README.zh-CN.md  pyproject.toml
client/argus/: __init__.py  context.py  identity.py  reporter.py  schema.py  spill.py
client/examples/: benchmark_wrapper.py  callback_style.py  leaderboard_full_demo.py  simple.py
client/tests/: conftest.py  test_context.py  test_context_manager.py  test_hydra_callback.py  test_integrations_lazy_import.py  test_keras_callback.py  test_lightning_callback.py  test_reporter_artifact.py  test_reporter_auth.py  test_reporter_basic.py  test_reporter_batch_endpoint.py  test_reporter_disable_env.py  test_reporter_explicit_batch_id.py  test_reporter_failure.py  test_reporter_idempotent.py  test_reporter_queue_full.py  test_reporter_spill_replay.py  test_reporter_timeout.py
(+290 files in other folders)
